test for statments finish